@@ -16,6 +16,12 @@ Changelog
 * Feature: added a @@assessments_latest_versions_links view that retrieves a
   list of all published assessments, only the latest versions
   [tiberich #14871 EEA]
+* Bug fix: added a content rule to enable discussions on Assessments when the
+  'show' or 'publishEionet' transitions are executed. 
+  [tiberich #14858]
+* Bug fix: don't try to set discussionAllowed on assessments from code; this
+  will be done from a content rule.
+  [tiberich #14858]
 
 7.0 - (2013-06-17)
 ------------------
